# Course-GenomeMapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
docs/: README.md
docs/step_0/: README.md
docs/step_1/: README.md
docs/step_2/: README.md
docs/step_3/: README.md
docs/step_4/: README.md
docs/step_5/: README.md
docs/step_6/: README.md
include/: README.md  config.h  config.h.in  fasta_parser.cpp  fasta_parser.h  opt_parser.cpp  opt_parser.h
include/BioSequenceParser/: BioSequenceParser.h  CMakeLists.txt  FastaParser.cpp  FastaParser.h  FastqParser.cpp  FastqParser.h
include/FastaParser/: CMakeLists.txt  FastaParser.cpp  FastaParser.h
include/FastqParser/: CMakeLists.txt  FastqParser.h
include/OptParser/: CMakeLists.txt  OptParser.cpp
include/bio_sequence_parser/: CMakeLists.txt  fasta_parser.h  fastq_parser.h
include/biosequence_parser/: CMakeLists.txt  biosequence_parser.h  fasta_parser.cpp  fasta_parser.h  fastq_parser.cpp  fastq_parser.h
include/mist_alignment_engine/: CMakeLists.txt  align.cpp  align.h
include/mist_minimizer_engine/: CMakeLists.txt  minimizer  minimizer.cpp  minimizer.h
include/opt_parser/: CMakeLists.txt  opt_parser.cpp  opt_parser.h
src/: README.md  mist_mapper.cpp
test/: CMakeLists.txt  FastaParserTest.cpp  FastqParserTest.cpp  OptParserTest.cpp  README.md  alignment_test.cpp  fasta_parser_test.cpp  fastq_parser_test.cpp  minimizer_test.cpp  opt_parser_test.cpp  test_test.cpp
test_data/: test1.fasta  test1.fastq  test2.fasta  test2.fastq  test_reads.fasta  test_reads.fastq  test_ref.fasta
